--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "admin",
-  "description": "hello world test app",
+  "name": "application-name",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
-    "express": "3.x"
+    "express": "3.3.4",
+    "jade": "*",
+    "less-middleware": "*"
   }
 }
